# np_codeocean

./: .gitignore  README.md  pyproject.toml  test-upload-behavior-training-batch.bat  test-upload-behavior-training-singleton.bat  upload.bat
src/np_codeocean/: __init__.py  aind_data.py  aind_data_schema.py  np_session_utils.py  upload.py  upload_one.py  utils.py
src/np_codeocean/metadata/: __init__.py  common.py  core.py  dynamic_routing_task_etl.py  np.py  rigs.py  storage.py  update.py
src/np_codeocean/metadata/model_templates/: behavior_box.py  neuropixels_rig.py
src/np_codeocean/scripts/: upload_dynamic_routing_behavior.py  upload_dynamic_routing_ecephys.py  upload_dynamic_routing_training.py  upload_dynamic_routing_with_metadata.py  upload_sessions.py  upload_split_recordings_example.py
tests/: test_aind_data.py  test_aind_data_schema.py  test_metadata.py
tests/resources/: rig.json
