
[project]
name = "np_codeocean"
version = "0.3.10"
description = "Tools for uploading and interacting with Mindscope Neuropixels experiments on Code Ocean"
authors = [
    { name = "Ben Hardcastle", email = "ben.hardcastle@alleninstitute.org" },
    { name = "Chris Mochizuki", email = "chrism@alleninstitute.org" },
    { name = "Arjun Sridhar", email = "arjun.sridhar@alleninstitute.org" },
]
dependencies = [
    "np_session>=0.6.44",
    "np-tools>=0.1.23",
    "np-config>=0.4.33",
    "requests>=2.31.0",
    "npc-session>=0.1.34",
    "polars>=0.20.16",
    "npc-lims>=0.1.168",
    "npc-ephys>=0.1.32",
    "wavpack-numcodecs<0.2",
    "cryptography<43.0",
    "aind-data-transfer-service>=1.15.0",
    "aind-slurm-rest-v2==0.0.3",
    "aind-codeocean-pipeline-monitor>=0.5.2",
]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.license]
text = "MIT"

[project.urls]
Source = "https://github.com/AllenInstitute/np_codeocean"
Issues = "https://github.com/AllenInstitute/np_codeocean/issues"

[project.scripts]
upload_dr_behavior = "np_codeocean.scripts.upload_dynamic_routing_behavior:main"
upload_dr_ecephys = "np_codeocean.scripts.upload_dynamic_routing_ecephys:main"
upload_sessions = "np_codeocean.scripts.upload_sessions:main"

[project.optional-dependencies]
dynamicrouting = [
    "npc-lims>=0.1.154",
    "npc-sessions[metadata]>=0.0.274",
    "aind-codeocean-pipeline-monitor[full]>=0.5.0",
]
openscope = ["aind-metadata-mapper"]


[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
task_runner = ["poethepoet>=0.33.1"]
linting = ["black>=25.1.0", "isort>=6.0.1", "ruff>=0.11.2"]
testing = ["mypy>=1.4.1"]
bump = ["bump-my-version>=1.1.1", "git-changelog>=2.5.3"]
drdev = ["np_codeocean[dynamicrouting]", "npc-sessions[metadata] @ git+https://github.com/alleninstitute/npc_sessions"]

[tool.uv]
conflicts = [[{ extra = "dynamicrouting" }, { extra = "openscope" }, { extra = "drdev" }]]
package = true
default-groups = ["task_runner", "linting", "testing", "bump"]

[tool.poe.tasks]
mypy = "mypy src --install-types --non-interactive"
test = ["mypy"]
ruff = "ruff check src --fix-only"
black = "black src"
format = ["ruff", "black"]
bump_pub_tag = "bump-my-version bump patch"
release = ["format", "bump_pub_tag"]

[tool.bumpversion]
tag = true
allow_dirty = true
commit = true
commit_args = "-a"
message = "Bump version: {current_version} → {new_version} [skip actions]"
pre_commit_hooks = [
    "uv lock --upgrade-package np_workflows",
    "git-changelog -o CHANGELOG.md",
    "uv build",
    "uv publish",
]
post_commit_hooks = ["git push origin main", "git push --tags"]

[tool.ruff]
line-length = 100
select = [
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "E",      # pycodestyle
    "F",      # pyflakes
    "PGH",    # pygrep-hooks
    "RUF",    # ruff
    "W",      # pycodestyle
    "YTT",    # flake8-2020
    "ANN",
    "C",
    "I",
    "RUF100",
    "N",
    "UP",
]
# extend-ignore = ["B018", "B019"]
src = ["src"]
extend-exclude = ["tests/fixtures"]
target-version = "py39"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
known-first-party = ["np_workflows"]
